// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph Helper #buildLinkProps when building props for a link and custom color is set to green should return green color in the props: green 1`] = `"green"`;

exports[`Graph Helper #buildLinkProps when building props for a link and no custom color is set should return default color defined in link config: #d3d3d3 1`] = `"#d3d3d3"`;

exports[`Graph Helper #buildNodeProps and custom strokeColor is set to yellow should return yellow strokeColor in the props: yellow 1`] = `"yellow"`;

exports[`Graph Helper #buildNodeProps and no custom strokeColor is set should return the default strokeColor in the props: none 1`] = `"none"`;

exports[`Graph Helper #buildNodeProps when node to build is the highlightedLink target (or source) and highlight degree is 0 should properly build node props () 1`] = `
Object {
  "className": "node",
  "color": "green",
  "cursor": "pointer",
  "cx": 1,
  "cy": 2,
  "dx": 11.5,
  "fill": "green",
  "fontColor": "black",
  "fontSize": 8,
  "fontWeight": "normal",
  "highlighted": false,
  "id": "id",
  "label": "id",
  "onClickNode": undefined,
  "onMouseOut": undefined,
  "onMouseOverNode": undefined,
  "onRightClickNode": undefined,
  "opacity": undefined,
  "overrideGlobalViewGenerator": undefined,
  "renderLabel": true,
  "size": 200,
  "stroke": "none",
  "strokeWidth": 1.5,
  "svg": "file.svg",
  "symbolType": undefined,
  "type": "circle",
  "viewGenerator": null,
  "x": 1,
  "y": 2,
}
`;

exports[`Graph Helper #buildNodeProps when node to build is the highlightedLink target (or source) and highlight degree is bigger then 0 should properly build node props 1`] = `
Object {
  "className": "node",
  "color": "green",
  "cursor": "pointer",
  "cx": 1,
  "cy": 2,
  "dx": 11.5,
  "fill": "green",
  "fontColor": "black",
  "fontSize": 8,
  "fontWeight": "normal",
  "highlighted": false,
  "id": "id",
  "label": "id",
  "onClickNode": undefined,
  "onMouseOut": undefined,
  "onMouseOverNode": undefined,
  "onRightClickNode": undefined,
  "opacity": undefined,
  "overrideGlobalViewGenerator": undefined,
  "renderLabel": true,
  "size": 200,
  "stroke": "none",
  "strokeWidth": 1.5,
  "svg": "file.svg",
  "symbolType": undefined,
  "type": "circle",
  "viewGenerator": null,
  "x": 1,
  "y": 2,
}
`;

exports[`Graph Helper #buildNodeProps when node to build is the highlightedNode should return node props with proper highlight values 1`] = `
Object {
  "className": "node",
  "color": "green",
  "cursor": "pointer",
  "cx": 1,
  "cy": 2,
  "dx": 15.5,
  "fill": "red",
  "fontColor": "black",
  "fontSize": 12,
  "fontWeight": "bold",
  "highlighted": true,
  "id": "id",
  "label": "id",
  "onClickNode": undefined,
  "onMouseOut": undefined,
  "onMouseOverNode": undefined,
  "onRightClickNode": undefined,
  "opacity": 1,
  "overrideGlobalViewGenerator": undefined,
  "renderLabel": true,
  "size": 200,
  "stroke": "yellow",
  "strokeWidth": 2,
  "svg": "file.svg",
  "symbolType": undefined,
  "type": "circle",
  "viewGenerator": null,
  "x": 1,
  "y": 2,
}
`;
